--- a/book1/ch03/bk1_ch03_01.ipynb
+++ b/book1/ch03/bk1_ch03_01.ipynb
@@ -135,6 +135,8 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "About LaTex, we can use [online tool kit](https://www.latexlive.com/)\n",
+    "\n",
     "$\\pi$\n",
     "\n",
     "$$a^2$$"
