--- a/book1/ch03/bk1_ch03_01.ipynb
+++ b/book1/ch03/bk1_ch03_01.ipynb
@@ -1,14 +1,17 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Markdown in Jupyter Notebook",
-   "id": "139138396d307eb7"
+   "id": "139138396d307eb7",
+   "metadata": {},
+   "source": [
+    "# Markdown in Jupyter Notebook"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "864639f48d1a9677",
+   "metadata": {},
    "source": [
     "# Level 1 Header\n",
     "\n",
@@ -26,30 +29,32 @@
     "<h3>Level 3 Header</h3>\n",
     "<h4>Level 4 Header</h4>\n",
     "<h5>Level 5 Header</h5>"
-   ],
-   "id": "864639f48d1a9677"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "<font color=orange>colored text</font>",
-   "id": "b611efa02fda37bc"
+   "id": "b611efa02fda37bc",
+   "metadata": {},
+   "source": [
+    "<font color=orange>colored text</font>"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "940639c62eb1abbb",
+   "metadata": {},
    "source": [
     "*italic text*\n",
     "\n",
     "_italic text_\n",
     "\n",
     "<em>italic text</em>"
-   ],
-   "id": "940639c62eb1abbb"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "be4f6c377a87ddd3",
+   "metadata": {},
    "source": [
     "**bold text**\n",
     "\n",
@@ -58,34 +63,34 @@
     "<strong>bold text</strong>\n",
     "\n",
     "<b>bold text</b>"
-   ],
-   "id": "be4f6c377a87ddd3"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "5f6fe3b8bb2508c4",
+   "metadata": {},
    "source": [
     "***bold and italic text***\n",
     "\n",
     "___bold and italic text___\n",
     "\n",
     "<strong><em>bold and italic text</em></strong>"
-   ],
-   "id": "5f6fe3b8bb2508c4"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "403a23dde7397a8b",
+   "metadata": {},
    "source": [
     "~~Scratch this~~\n",
     "\n",
     "<del>Scratch this</del>"
-   ],
-   "id": "2106e8a256f3bb0f"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "66e53c26ff745530",
+   "metadata": {},
    "source": [
     "***\n",
     "\n",
@@ -94,12 +99,12 @@
     "___\n",
     "\n",
     "<hr>"
-   ],
-   "id": "66e53c26ff745530"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "8a11f5f0f76bcc64",
+   "metadata": {},
    "source": [
     "* bullet point 1\n",
     "* bullet point 2\n",
@@ -116,71 +121,68 @@
     "\n",
     "1. bullet point 1\n",
     "2. bullet point 2"
-   ],
-   "id": "8a11f5f0f76bcc64"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "410b672c577e561c",
+   "metadata": {},
    "source": [
     "> quote\n",
     "\n",
     "> quote level 1\n",
     ">> quote level 2\n",
     ">>> quote level 3"
-   ],
-   "id": "410b672c577e561c"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "421e25b90c32c3ee",
+   "metadata": {},
    "source": [
     "$\\pi$\n",
     "\n",
     "$$a^2$$"
-   ],
-   "id": "421e25b90c32c3ee"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "59457c3b70284d79",
+   "metadata": {},
    "source": [
     "| col 1 | col 2 | col 3 |\n",
     "|:-----:|:-----:|:-----:|\n",
     "|   1   |   A   |   a   |\n",
     "|   2   |   B   |   b   |"
-   ],
-   "id": "59457c3b70284d79"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "\\*",
-   "id": "62b2dad5a751a3c"
+   "id": "62b2dad5a751a3c",
+   "metadata": {},
+   "source": [
+    "\\*"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "[link](https://github.com)",
-   "id": "e62c59009fb7217f"
+   "id": "e62c59009fb7217f",
+   "metadata": {},
+   "source": [
+    "[link](https://github.com)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "b137df033a95ebaa",
+   "metadata": {},
    "source": [
     "`print('Python!')`\n",
     "\n",
     "```python\n",
     "print('hello world')\n",
     "```"
-   ],
-   "id": "b137df033a95ebaa"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "",
-   "id": "f5e477dda58e86bd"
+   ]
   }
  ],
  "metadata": {
