jupyter lab keymap

--- a/book1/ch03/bk1_ch03_01.ipynb
+++ b/book1/ch03/bk1_ch03_01.ipynb
@@ -2,11 +2,37 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "139138396d307eb7",
+   "id": "da374f826bbe35c7",
    "metadata": {},
+   "source": "# Note of Jupyter"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "# Markdown in Jupyter Notebook"
-   ]
+    "## Jupyter 常用快捷键\n",
+    "\n",
+    "⇧ + ⏎ 执行(PyCharm)\n",
+    "\n",
+    "⎋ » m 转换cell为Markdown\n",
+    "\n",
+    "⎋ » Y\n",
+    "\n",
+    "⎋ » a 在当前cell前添加一个新cell\n",
+    "\n",
+    "⎋ » b 在当前cell后添加一个新cell\n",
+    "\n",
+    "⎋ » dd 删除当前cell\n",
+    "\n",
+    "⌘ + ⇧ + _ 在当前cell后添加一个markdown cell"
+   ],
+   "id": "ea60a91edef3aa0d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Markdown in Jupyter Notebook",
+   "id": "139138396d307eb7"
   },
   {
    "cell_type": "markdown",
