jupyter lab keymap

--- a/book1/ch03/bk1_ch03_01.ipynb
+++ b/book1/ch03/bk1_ch03_01.ipynb
@@ -12,19 +12,21 @@
    "source": [
     "## Jupyter 常用快捷键\n",
     "\n",
-    "⇧ + ⏎ 执行(PyCharm)\n",
+    "⌃ + ⏎ run cell\n",
     "\n",
-    "⎋ » m 转换cell为Markdown\n",
+    "⌥ + ⇧ + ⏎ debug cell\n",
     "\n",
-    "⎋ » Y\n",
+    "⎋ » m convert cell to markdown\n",
     "\n",
-    "⎋ » a 在当前cell前添加一个新cell\n",
+    "⎋ » Y convert cell to code\n",
     "\n",
-    "⎋ » b 在当前cell后添加一个新cell\n",
+    "⎋ » a add code cell above\n",
     "\n",
-    "⎋ » dd 删除当前cell\n",
+    "⎋ » b add code cell below\n",
     "\n",
-    "⌘ + ⇧ + _ 在当前cell后添加一个markdown cell"
+    "⎋ » dd delete cell\n",
+    "\n",
+    "⌘ + ⇧ + - split cell"
    ],
    "id": "ea60a91edef3aa0d"
   },
