--- a/book1/ch07/bk1_ch07_01.ipynb
+++ b/book1/ch07/bk1_ch07_01.ipynb
@@ -30,6 +30,20 @@
     "dot_product"
    ],
    "id": "28449d332eae69c9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "dot_product = 0\n",
+    "for a_i, b_i in zip(a, b):\n",
+    "    dot_product += a_i * b_i\n",
+    "    \n",
+    "dot_product"
+   ],
+   "id": "9e853c8683e95fc1"
   }
  ],
  "metadata": {
