--- a/book3/ch01/bk3_ch01_01.ipynb
+++ b/book3/ch01/bk3_ch01_01.ipynb
@@ -3,24 +3,108 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "向量",
+   "source": [
+    "# 向量\n",
+    "\n",
+    "若干数字拍成一行或者一列，并且用中括号括起来，得到的数组叫做**向量(vector)**。"
+   ],
    "id": "993766b494e34e3a"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "import numpy as np",
-   "id": "f7ed0c6b408dca2a",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "import numpy as np",
+   "id": "4ba9ad77638c226e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "排成一行的叫**行向量(row vector)**\n",
+    "\n",
+    "$${\\begin{bmatrix} 1 & 2 & 3 \\end{bmatrix}}_{1 \\times 3}$$"
+   ],
+   "id": "2d6535a519ceef3"
   },
   {
    "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "a_i = np.linspace(1, 10, 10)\n",
-    "a_i"
+    "# row vector transposed to a column vector\n",
+    "a_row = np.array([[1, 2, 3]])\n",
+    "print(a_row)\n",
+    "print(a_row.T)"
    ],
+   "id": "49e402340164f5d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "a_row",
+   "id": "b579f7bf40fc414"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "a_row.T",
+   "id": "50021bd776fe6ebb"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "排成一列的叫**列向量(column vector)**。\n",
+    "\n",
+    "$${\\begin{bmatrix} 1 \\\\ 2 \\\\ 3 \\end{bmatrix}}_{3 \\times 1}$$"
+   ],
+   "id": "a12414008d5ecd5d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "b_col = np.array([[1], [2], [3]])\n",
+    "print(b_col)\n",
+    "print(b_col.T)"
+   ],
+   "id": "29e590c52a519eb0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "b_col",
+   "id": "942faad167fd9646"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "b_col.T",
+   "id": "fdb4d88eaea14889"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# ",
+   "id": "38b249c131bfed1d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
    "id": "d67a87a88ad2a91e",
    "outputs": [],
    "execution_count": null
@@ -28,10 +112,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "a_i_cumsum = np.cumsum(a_i)\n",
-    "a_i_cumsum"
-   ],
+   "source": "",
    "id": "abfe8ab76bd3082",
    "outputs": [],
    "execution_count": null
@@ -39,68 +120,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "# row vector transposed to a column vector\n",
-    "a_row = np.array([[1, 2, 3]])\n",
-    "print(a_row)\n",
-    "print(a_row.T)"
-   ],
-   "id": "735e2e508005a6d2",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "a_row",
-   "id": "23c040ec80bbc200",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "a_row.T",
-   "id": "545911c5844a4a49",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "b_col = np.array([[1], [2], [3]])\n",
-    "print(b_col)\n",
-    "print(b_col.T)"
-   ],
-   "id": "de4ac8c043c11d1c",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "b_col",
-   "id": "4fd3c0edf83b556d",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "b_col.T",
-   "id": "5da70845d4668bb6",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "A = np.array([[1, 2, 3],\n",
-    "              [4, 5, 6]])\n",
-    "A"
-   ],
+   "source": "",
    "id": "72a3a5e20671f012",
    "outputs": [],
    "execution_count": null
@@ -108,10 +128,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "A_first_col = A[:, 0]  # saved as one dimension row\n",
-    "A_first_col"
-   ],
+   "source": "",
    "id": "78392dad3391f49c",
    "outputs": [],
    "execution_count": null
@@ -119,10 +136,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "A_first_col_V2 = A[:, [0]]  # saved as a column\n",
-    "A_first_col_V2"
-   ],
+   "source": "",
    "id": "f97afcd7a34af970",
    "outputs": [],
    "execution_count": null
@@ -130,10 +144,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "A_first_second_col_V2 = A[:, [0, 1]]  # extract first and second columns\n",
-    "A_first_second_col_V2"
-   ],
+   "source": "",
    "id": "b782f9e882664301",
    "outputs": [],
    "execution_count": null
@@ -141,10 +152,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "A_first_third_col_V2 = A[:, [0, 2]]  # extract first and third columns\n",
-    "A_first_third_col_V2"
-   ],
+   "source": "",
    "id": "4e7a8d59e9cd90e4",
    "outputs": [],
    "execution_count": null
@@ -152,10 +160,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "A_first_row = A[[0], :]  # extract first row\n",
-    "A_first_row"
-   ],
+   "source": "",
    "id": "103473c72cc24cbd",
    "outputs": [],
    "execution_count": null
@@ -163,10 +168,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "A_second_row = A[[1], :]  # extract second row\n",
-    "A_second_row"
-   ],
+   "source": "",
    "id": "99570a38e7afe318",
    "outputs": [],
    "execution_count": null
@@ -174,10 +176,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "A_second_row_first_col = A[[1], [0]]\n",
-    "A_second_row_first_col"
-   ],
+   "source": "",
    "id": "a87b549c536a8d9a",
    "outputs": [],
    "execution_count": null
