--- a/book3/bk3_02_matrix.ipynb
+++ b/book3/bk3_02_matrix.ipynb
@@ -35,99 +35,99 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "import numpy as np",
-   "id": "6cb41223ac47bb89"
+   "id": "6cb41223ac47bb89",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "A = np.array([[1, 2, 3],\n",
     "              [4, 5, 6]])\n",
     "A"
    ],
-   "id": "695c9f8e97ff1d5b"
+   "id": "695c9f8e97ff1d5b",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "A_first_col = A[:, 0]  # saved as one dimension row\n",
     "A_first_col"
    ],
-   "id": "a47b61692277496b"
+   "id": "a47b61692277496b",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "A_first_col_V2 = A[:, [0]]  # saved as a column\n",
     "A_first_col_V2"
    ],
-   "id": "f47fc257234191b4"
+   "id": "f47fc257234191b4",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "A_first_second_col_V2 = A[:, [0, 1]]  # extract first and second columns\n",
     "A_first_second_col_V2"
    ],
-   "id": "f23e4ea4cb6d7434"
+   "id": "f23e4ea4cb6d7434",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "A_first_third_col_V2 = A[:, [0, 2]]  # extract first and third columns\n",
     "A_first_third_col_V2"
    ],
-   "id": "3a12b5f25a561b73"
+   "id": "3a12b5f25a561b73",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "A_first_row = A[[0], :]  # extract first row\n",
     "A_first_row"
    ],
-   "id": "a60b57b3e899c44f"
+   "id": "a60b57b3e899c44f",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "A_second_row = A[[1], :]  # extract second row\n",
     "A_second_row"
    ],
-   "id": "f1db5df1c5d095ad"
+   "id": "f1db5df1c5d095ad",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "A_second_row_first_col = A[[1], [0]]\n",
     "A_second_row_first_col"
    ],
-   "id": "41ad58eab8543250"
+   "id": "41ad58eab8543250",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -241,34 +241,32 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "list1 = [1, 2, 3]\n",
     "list2 = [4, 5, 6]\n",
     "print([x + y for x, y in zip(list1, list2)])\n",
     "print(list(map(lambda x, y: x + y, list1, list2)))"
    ],
-   "id": "ce2d479215aacb9b"
+   "id": "ce2d479215aacb9b",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "x = np.array(list1)\n",
     "y = np.array(list2)\n",
     "print(x + y)\n",
     "print(np.add(list1, list2))"
    ],
-   "id": "af1b63d48aa48e98"
+   "id": "af1b63d48aa48e98",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "A = [[1, 2, 3],\n",
     "     [4, 5, 6]]\n",
@@ -280,18 +278,186 @@
     "]\n",
     "print(A_plus_B)"
    ],
-   "id": "bc1552f803c7b0ab"
+   "id": "bc1552f803c7b0ab",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "print(np.array(A) + np.array(B))\n",
     "print(np.add(A, B))"
    ],
-   "id": "2ec96109b81077f8"
+   "id": "2ec96109b81077f8",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 乘法\n",
+    "\n",
+    "**矩阵乘法是最重要的线性代数运算。** *A*和*B*两个矩阵相乘的前提是矩阵*A*的列数和矩阵*B*的行数相同。*A*和*B*的乘积一般写作*AB*。\n",
+    "\n",
+    "NumPy中，恋歌矩阵相乘的运算符为`@`，比如*AB*也记作*A@B*。\n",
+    "\n",
+    "$$C_{m \\times n} = A_{m \\times p}B_{p \\times n} = A_{m \\times p} \\@ B_{p \\times n}$$"
+   ],
+   "id": "87ef0b10a31dc424"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "A = np.array([[1, 2],\n",
+    "              [3, 4]])\n",
+    "\n",
+    "B = np.array([[4, 2],\n",
+    "              [3, 1]])\n",
+    "\n",
+    "# calculate matrix multiplication\n",
+    "C = A @ B\n",
+    "C"
+   ],
+   "id": "2014460fce449e5e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Repeatability\n",
+    "np.random.seed(7)\n",
+    "\n",
+    "# Generate matrix A and B\n",
+    "m = 6\n",
+    "p = 3\n",
+    "n = 4\n",
+    "\n",
+    "A = np.random.uniform(-1, 1, m * p).reshape(m, p)\n",
+    "B = np.random.uniform(-1, 1, p * n).reshape(p, n)\n",
+    "\n",
+    "C = A @ B\n",
+    "\n",
+    "all_max = 1\n",
+    "all_min = -1\n",
+    "\n",
+    "fig, axs = plt.subplots(1, 5, figsize=(12, 3))\n",
+    "\n",
+    "plt.sca(axs[0])\n",
+    "ax = sns.heatmap(A, cmap='RdBu_r', vmax=all_max, vmin=all_min,\n",
+    "                 cbar_kws={\"orientation\": \"horizontal\"},\n",
+    "                 yticklabels=np.arange(1, m + 1), xticklabels=np.arange(1, p + 1))\n",
+    "ax.set_aspect(\"equal\")\n",
+    "plt.title('$A$')\n",
+    "plt.yticks(rotation=0)\n",
+    "\n",
+    "plt.sca(axs[1])\n",
+    "plt.title('$@$')\n",
+    "plt.axis('off')\n",
+    "\n",
+    "plt.sca(axs[2])\n",
+    "ax = sns.heatmap(B, cmap='RdBu_r', vmax=all_max, vmin=all_min,\n",
+    "                 cbar_kws={\"orientation\": \"horizontal\"},\n",
+    "                 yticklabels=np.arange(1, p + 1), xticklabels=np.arange(1, n + 1))\n",
+    "ax.set_aspect(\"equal\")\n",
+    "plt.title('$B$')\n",
+    "plt.yticks(rotation=0)\n",
+    "\n",
+    "plt.sca(axs[3])\n",
+    "plt.title('$=$')\n",
+    "plt.axis('off')\n",
+    "\n",
+    "plt.sca(axs[4])\n",
+    "ax = sns.heatmap(C, cmap='RdBu_r', vmax=all_max, vmin=all_min,\n",
+    "                 cbar_kws={\"orientation\": \"horizontal\"},\n",
+    "                 yticklabels=np.arange(1, m + 1), xticklabels=np.arange(1, n + 1))\n",
+    "ax.set_aspect(\"equal\")\n",
+    "plt.title('$C$')\n",
+    "plt.yticks(rotation=0)"
+   ],
+   "id": "494ebfb8e140306f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 除法\n",
+    "\n",
+    "实际上并不存在所谓的矩阵除法。所谓矩阵*B*除以矩阵*A*，实际上是将矩阵*A*先转化逆矩阵，然后计算与逆矩阵的乘积。"
+   ],
+   "id": "36df219988b51f20"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "from numpy.linalg import inv\n",
+    "from matplotlib import pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Repeatability\n",
+    "np.random.seed(0)\n",
+    "# Generate matrix A\n",
+    "n = 4\n",
+    "A = np.random.uniform(-1.5, 1.5, n * n).reshape(n, n)\n",
+    "\n",
+    "all_max = 1.5\n",
+    "all_min = -1.5\n",
+    "\n",
+    "# matrix inverse\n",
+    "A_inverse = inv(A)\n",
+    "\n",
+    "fig, axs = plt.subplots(1, 5, figsize=(12, 3))\n",
+    "\n",
+    "plt.sca(axs[0])\n",
+    "ax = sns.heatmap(A, cmap='RdBu_r', vmax=all_max, vmin=all_min,\n",
+    "                 cbar_kws={\"orientation\": \"horizontal\"},\n",
+    "                 yticklabels=np.arange(1, n + 1), xticklabels=np.arange(1, n + 1),\n",
+    "                 annot=True, fmt=\".2f\")\n",
+    "ax.set_aspect(\"equal\")\n",
+    "plt.title('$A$')\n",
+    "plt.yticks(rotation=0)\n",
+    "\n",
+    "plt.sca(axs[1])\n",
+    "plt.title('$@$')\n",
+    "plt.axis('off')\n",
+    "\n",
+    "plt.sca(axs[2])\n",
+    "ax = sns.heatmap(A_inverse, cmap='RdBu_r', vmax=all_max, vmin=all_min,\n",
+    "                 cbar_kws={\"orientation\": \"horizontal\"},\n",
+    "                 yticklabels=np.arange(1, n + 1), xticklabels=np.arange(1, n + 1),\n",
+    "                 annot=True, fmt=\".2f\")\n",
+    "ax.set_aspect(\"equal\")\n",
+    "plt.title('$A^{-1}$')\n",
+    "plt.yticks(rotation=0)\n",
+    "\n",
+    "plt.sca(axs[3])\n",
+    "plt.title('$=$')\n",
+    "plt.axis('off')\n",
+    "\n",
+    "plt.sca(axs[4])\n",
+    "ax = sns.heatmap(A @ A_inverse, cmap='RdBu_r', vmax=all_max, vmin=all_min,\n",
+    "                 cbar_kws={\"orientation\": \"horizontal\"},\n",
+    "                 yticklabels=np.arange(1, n + 1), xticklabels=np.arange(1, n + 1),\n",
+    "                 annot=True, fmt=\".2f\")\n",
+    "ax.set_aspect(\"equal\")\n",
+    "plt.title('$I$')\n",
+    "plt.yticks(rotation=0)"
+   ],
+   "id": "5be53d93a5578b7b",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
